--- a/src/components/common/Loader/index.scss
+++ b/src/components/common/Loader/index.scss
@@ -9,7 +9,7 @@
     p {
         font-family: system-ui;
         font-weight: 500;
-        color: rgba($color: 0, 0, 0, 0.9);
+        color: rgba(0, 0, 0, 0.9);
         font-size: 20px;
     }
 }
